Fixed bugs and completed product

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                             <p>Add processes and run the simulation to see the Gantt chart</p>
                         </div>
                     </div>
-                    <div id="timeline" class="timeline">
-                        <!-- Timeline will be rendered here -->
+                    <div id="timeline-container" class="timeline-container">
+                        <!-- Timeline rows will be rendered here -->
                     </div>
                 </div>
             </section>
